fix: 让a撑满包含块 .topnav-link {   display: block;   width: 100%;   height: 100%;   line-height: 40px;   text-align: center;   background-color: #424242; } 如果后面有定位元素会给覆盖掉（规定弹出菜单 2位数；固定菜单 3位数）

--- a/css/topnav.css
+++ b/css/topnav.css
@@ -35,42 +35,45 @@
 
 /* 购物车样式 */
 .topnav-car {
-    position: relative;
+  width: 120px;
+  height: 40px;
+  margin-left: 13px;
+  position: relative;
 }
 
-.topnav-car {
-    display: block;
-    width: 120px;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    background-color: #424242;
-    cursor: pointer;
-    margin-left: 13px;
+.topnav-link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  line-height: 40px;
+  text-align: center;
+  background-color: #424242;
 }
 
-.topnav-car:hover {
-    background-color: #fff;
+.topnav-link span {
+  margin-left: 3px;
 }
 
 .topnav-car:hover a {
-    color: #ff6700;
+  background-color: #fff;
 }
 
 .topnav-car .topnav-car-detail {
-    width: 320px;
-    height: 100px;
-    border: 1px solid #ccc;
-    border-top: none;
-    position: absolute;
-    top: 40px;
-    right: 0;
-    line-height: 100px;
-    text-align: center;
-    cursor: auto;
-    display: none;
+  width: 320px;
+  height: 100px;
+  border: 1px solid #ccc;
+  border-top: none;
+  position: absolute;
+  top: 40px;
+  right: 0;
+  line-height: 100px;
+  text-align: center;
+  background-color: #fff;
+  display: none;
+  /* 如果后面有定位元素会给覆盖掉（规定弹出菜单 2位数；固定菜单 3位数） */
+  z-index: 50;
 }
 
 .topnav-car:hover .topnav-car-detail {
-    display: block;
+  display: block;
 }
